--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container">
-      <a class="logo" href="#">DoMa</a>
+      <a class="logo" href="tel: 01288225083">DoMa</a>
       <ul>
         <li><a href="#home" class="active">Home</a></li>
         <li><a href="#about">about</a></li>
