--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container">
-      <a download class="logo" href="tel: 01288225083">DoMa</a>
+      <a class="logo" href="tel: 01288225083">DoMa</a>
       <ul>
         <li><a href="#home" class="active">Home</a></li>
         <li><a href="#about">about</a></li>
@@ -27,7 +27,7 @@
         <h1>Adham Hany</h1>
         <h4>I'm Web development & Web Design</h4>
         <p>Hello my Brothers, I am a website developer. I am 18 years old. I am a university student. I love the field of website programming. </p>
-        <a class="btn2" href="#">Download CV</a>
+        <a download class="btn2" href="#">Download CV</a>
       </div>
       <div class="img-contant">
         <img class="cont" src="img/contant.png">
